2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_register_fundamental_full): Handle
	wrapper_class_by_type being NULL gracefully.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs: In Glib::filename_from_uri and filename_to_uri, use the
	gchar converters for the hostname.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_callback_invoke): Use the <"%s", pointer>
	pattern when passing an error string pointer to croak().

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: Make the various Glib::Flags methods more robust with
	respect to receiving undefined input.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs (gperl_register_boxed)
	* GObject.xs (gperl_register_object)
	* GType.xs (gperl_register_fundamental): When inserting into the
	package → type hash tables, use g_hash_table_replace instead of
	_insert so that the new string pointer is used as the key.  Patch
	by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.212.

2009-02-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/a.t
	* GLog.xs: Make sure that messages with % chars in them make it
	through Glib::log() and friends safely.

2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* ParseXSDoc.pm (xsdocparse): Always use Data::Dumper on MSWin32
	for serialization.  Storable seems to consistently fail there,
	stating 'Magic number checking on storable file failed'.

2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs
	* GSignal.xs: Hush some compiler warnings.

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: Add documentation for Glib->filename_to_uri and
	filename_from_uri.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs
	* t/e.t: Add Glib::ParamSpec->value_cmp.  Patch by Kevin Ryde.
